--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "travel_df."
+   ]
   },
   {
    "cell_type": "markdown",
