--- a/index.ipynb
+++ b/index.ipynb
@@ -289,11 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 12 entries, 0 to 11\n",
+      "Data columns (total 4 columns):\n",
+      "City          12 non-null object\n",
+      "Country       12 non-null object\n",
+      "Population    12 non-null int64\n",
+      "Area          12 non-null int64\n",
+      "dtypes: int64(2), object(2)\n",
+      "memory usage: 512.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
-    "travel_df."
+    "travel_df.info()"
    ]
   },
   {
